// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Link Cms link with its default values 1`] = `
<span
  className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 jhNVIy"
>
  <a
    className="Link__StyledLink-apj04t-0 ixkkIR"
    href="http://www.google.com"
    onClick={[Function]}
  >
    Link
  </a>
</span>
`;

exports[`Storyshots Molecules | Link Default usage 1`] = `
<span
  className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 jhNVIy"
>
  <a
    className="Link__StyledLink-apj04t-0 ixkkIR"
    href="/startpage"
    onClick={[Function]}
  >
    Link
  </a>
</span>
`;

exports[`Storyshots Molecules | Link External link with its default values 1`] = `
<span
  className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 jhNVIy"
>
  <a
    className="Link__StyledLink-apj04t-0 ixkkIR"
    href="http://www.google.com"
    onClick={[Function]}
    rel="noopener noreferrer nofollow"
    target="_blank"
  >
    Link
  </a>
</span>
`;

exports[`Storyshots Molecules | Link External link with rel and target overriden 1`] = `
<span
  className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 jhNVIy"
>
  <a
    className="Link__StyledLink-apj04t-0 ixkkIR"
    href="http://www.google.com"
    onClick={[Function]}
    rel="nofollow"
    target="_self"
  >
    Link
  </a>
</span>
`;

exports[`Storyshots Molecules | Link With black color 1`] = `
<span
  className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
>
  <a
    className="Link__StyledLink-apj04t-0 ijaISG"
    href="http://www.google.com"
    onClick={[Function]}
    rel="noopener noreferrer nofollow"
    target="_blank"
  >
    Link
  </a>
</span>
`;

exports[`Storyshots Molecules | Link With disabled prop results in a disabled button looking like a link 1`] = `
<span
  className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 jhNVIy"
>
  <button
    className="NormalizedButton__Button-ey7f5x-0 Link__StyledButton-apj04t-1 gOQraJ"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    Link
  </button>
</span>
`;

exports[`Storyshots Molecules | Link With inherited color 1`] = `
<span
  className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 iVJrff"
>
  <a
    className="Link__StyledLink-apj04t-0 ckDnVB"
    href="http://www.google.com"
    onClick={[Function]}
    rel="noopener noreferrer nofollow"
    target="_blank"
  >
    Link
  </a>
</span>
`;

exports[`Storyshots Molecules | Link With typography primary as type 1`] = `
<span
  className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 lhwrhZ"
>
  <a
    className="Link__StyledLink-apj04t-0 ixkkIR"
    href="/startpage"
    onClick={[Function]}
  >
    Link
  </a>
</span>
`;

exports[`Storyshots Molecules | Link Without to prop results in a button looking like a link 1`] = `
<span
  className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 jhNVIy"
>
  <button
    className="NormalizedButton__Button-ey7f5x-0 Link__StyledButton-apj04t-1 dubrSr"
    onClick={[Function]}
    type="button"
  >
    Link
  </button>
</span>
`;
